added seat_number and user_id while reserving the bus
